# rules_js

./: WORKSPACE  go.mod  go.sum  internal_deps.bzl  pnpm-lock.yaml
.github/workflows/: ci.yaml
example/run_js_binary/: BUILD.bazel
examples/npm_deps/: BUILD.bazel  peer_test.js
gazelle/: BUILD.bazel  README.md  config.go  configure.go  deps.bzl  fix.go  generate.go  generate_test.go  js_test.go  kinds.go  language.go  logging.go  node.go  parser.go  parser_test.go  python_test.go  resolve.go  resolve_test.go  std_modules.go  target.go  ts.go  ts_test.go
gazelle/testdata/simple_import_ts_project/: BUILD.out  README.md  lib.ts
gazelle/testdata/simple_ts_project/: BUILD.out
gazelle/tests/: README.md
gazelle/tests/gazelle_map_kind/: BUILD.out
gazelle/tests/npm_import/: README.md
gazelle/tests/npm_import_types/: README.md
gazelle/tests/npm_import_types_js/: BUILD.out  README.md
gazelle/tests/npm_new_types/: BUILD.out
gazelle/tests/simple_now_empty/: BUILD.in
gazelle/tests/simple_rule_naming/: BUILD.out
gazelle/tests/simple_ts_project/: BUILD.out
gazelle/tests/tests_globs/: BUILD.out
gazelle/tests/tests_simple/: BUILD.out  main.spec.ts
gazelle/tests/ts_baseurl/: tsconfig.json
gazelle/ts_api/: BUILD.bazel  README.md  index.js  main.ts  package-lock.json  package.json
gazelle/tsconfig/: BUILD.bazel  tsconfig.go  types.go
internal/patches/: rules_gazel-generation_test.bzl.patch
js/private/: js_library.bzl
js/private/test/image/structure/: BUILD.bazel
