load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gazelle",
    srcs = [
        "configure.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "language.go",
        "parser.go",
        "resolve.go",
        "target.go",
    ],
    importpath = "aspect.build/rules_js/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/tsconfig",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_bmatcuk_doublestar//:doublestar",
        "@com_github_emirpasic_gods//lists/singlylinkedlist",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_emirpasic_gods//utils",
        "@com_github_evanw_esbuild//pkg/api:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_test(
    name = "gazelle_test",
    srcs = [
        "js_test.go",
        "parser_test.go",
    ],
    data = [
        ":gazelle_js_binary",
    ] + glob(["testdata/**"]),
    embed = [":gazelle"],
    deps = [
        "@bazel_gazelle//testtools:go_default_library",
        "@com_github_emirpasic_gods//lists/singlylinkedlist",
        "@com_github_ghodss_yaml//:yaml",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_js_binary",
    languages = ["//gazelle"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_gazelle//:deps"],
)
